<resources>
    <string name="app_name">motoo</string>
    <string name="sign_up">회원가입</string>
    <string name="next">다음</string>
    <string name="login">로그인</string>
    <string name="email_address_text">이메일 주소</string>
    <string name="pw_text">비밀번호</string>
    <string name="start_by_kakao">카카오로 시작하기</string>
    <string name="start_by_google">구글로 시작하기</string>
    <string name="start_by_email">이메일로 시작하기</string>
    <string name="previousStep">이전단계</string>
    <string name="terms_explain">전체동의는 선택목적에 대한 동의를 포함하고 있으며,
        선택목적에 대한 동의를 거부해도 서비스 이용이 가능합니다.</string>
    <string name="terms_service">[필수] 서비스 이용 약관</string>
    <string name="terms_privacy">[필수] 개인정보 수집 동의</string>
    <string name="terms_marketing">[선택] 마케팅 정보 수신 동의</string>
    <string name="terms_marketing_privacy">[선택] 마케팅 개인정보 수신 동의</string>
    <string name="explainText_1">∙출금 신청하신 금액은 평일 오후 7시에 출금됩니다.</string>
    <string name="event_search_hint_text">종목명  • 초성 • 코드 • 심볼 검색으로 종목 추가</string>
    <string name="email_valid_true">사용 가능한 이메일입니다.</string>
    <string name="email_valid_error">이메일 형식이 올바르지 않습니다.</string>
    <string name="email_exist_error">이미 가입한 이메일 입니다.</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="country_num">
        <item>82</item>
        <item>1</item>
        <item>7</item>
        <item>33</item>
        <item>34</item>
        <item>44</item>
        <item>49</item>
        <item>61</item>
        <item>65</item>
        <item>81</item>
        <item>84</item>
        <item>86</item>
        <item>852</item>
        <item>204</item>
        <item>31</item>
        <item>30</item>
        <item>351</item>
        <item>358</item>
        <item>886</item>
    </string-array>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="game">경기</string>
    <string name="market">마켓</string>
    <string name="portfolio">포폴</string>
    <string name="myPage">마이</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exist_email">이미 존재하는 이메일입니다.</string>
    <string name="invalidEmailFormat">이메일 형식이 올바르지 않습니다.</string>
    <string name="practice_game_text">연습경기</string>
    <string name="오천원탭">5천원</string>
    <string name="만원탭">1만원</string>
    <string name="이만원탭">2만원</string>
    <string name="rankingGameExplain_1">총참가자 인원수에 따라 조편성이 안되는 경우 참가 신청 순서에 따라 마지막 조까지만 편성합니다.
    </string>
    <string name="rankingGameExplain_2">조 편성이 안된 참가자는 참가비가 환급됩니다.</string>
    <string name="rankingGameExplain_3">예시 : 3인 1조 경기 | 참가인원 59명 | 19개 조 편성 | 2명 참가비 환급</string>
    <string name="oneOneContact">질문 내용을 작성해주시면, 익일 오후 4시 이전에 답변드립니다. [영업일 기준]\n
        \n
        *산업안전보건법에 따라 고객응대근로자 보호조치가 시행 중이며, 모든 문의 내용은 기록으로 남습니다.\n
        \n
        *고객센터 운영시간 (월-금 10:00~19:00)</string>

    <string-array name="bankList">
        <item>선택</item>
        <item>국민</item>
        <item>농협</item>
        <item>우리</item>
        <item>수협</item>
        <item>한국시티</item>
        <item>케이뱅크</item>
        <item>광주</item>
        <item>부산</item>
        <item>새마을</item>
        <item>저축은행</item>
        <item>산업</item>
        <item>신협</item>
        <item>하나</item>
        <item>카카오뱅크</item>
        <item>경남</item>
        <item>대구</item>
        <item>전북</item>
        <item>우체국</item>
        <item>지역농.축협</item>
        <item>도이치</item>
        <item>중국건설</item>
        <item>중국공상</item>
        <item>BNP파리바</item>
        <item>BOA</item>
        <item>HSBC</item>
        <item>SC</item>
        <item>JP모간</item>
    </string-array>
</resources>