<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".signUp.TermsFragment">


    <FrameLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true">



        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="#2e2e2e"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="16dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:background="#f5f7fd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@color/brand" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@color/border_light" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@color/border_light" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@color/border_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/back_round_4_stroke_stroke"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@mipmap/ic_launcher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="모투(motoo)"
                    android:textColor="#424867"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="72dp"
                    android:background="@color/middle_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkbox_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="15dp"
                    android:button="@drawable/checkbox_custom"
                    android:paddingLeft="10dp"
                    android:text="전체 동의하기"
                    android:textColor="#171d29"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:breakStrategy="balanced"
                    android:inputType="textMultiLine"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/terms_explain"
                    android:textColor="#656670"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_all" />

                <CheckBox
                    android:id="@+id/checkbox_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:button="@drawable/checkbox_custom"
                    android:padding="5dp"
                    android:text="@string/terms_service"
                    android:textColor="#171d29"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkbox_privacy"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:layout_editor_absoluteX="35dp" />

                <CheckBox
                    android:id="@+id/checkbox_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:button="@drawable/checkbox_custom"
                    android:padding="5dp"
                    android:text="@string/terms_privacy"
                    android:textColor="#171d29"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkbox_marketing"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_service"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_service"
                    tools:layout_editor_absoluteX="35dp" />

                <CheckBox
                    android:id="@+id/checkbox_marketing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:button="@drawable/checkbox_custom"
                    android:padding="5dp"
                    android:text="@string/terms_marketing"
                    android:textColor="#171d29"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkbox_marketing_privacy"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_privacy"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_privacy"
                    tools:layout_editor_absoluteX="35dp" />

                <CheckBox
                    android:id="@+id/checkbox_marketing_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:button="@drawable/checkbox_custom"
                    android:padding="5dp"
                    android:text="@string/terms_marketing_privacy"
                    android:textColor="#171d29"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_marketing"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_marketing"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/button_next"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/gray_300"
                    android:enabled="false"
                    android:gravity="center"
                    android:lineSpacingExtra="-2sp"
                    android:text="동의하고 계속하기"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:layout_marginTop="26dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_marketing_privacy" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </FrameLayout>


</RelativeLayout>