<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".login.LoginFragment">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/noto_sans_kr_black"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:text="@string/login"
            android:textColor="#36364b"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/email_address_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/gray_500"
            android:textColorHint="@color/gray_500"
            android:textSize="18sp"
            android:textStyle="normal"
            android:theme="@style/EditTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:background="#fff" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/pw_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/gray_500"
            android:textColorHint="@color/gray_500"
            android:textSize="18sp"
            android:theme="@style/EditTheme"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            tools:background="#fff" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_round_gray_300_4dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:text="시작하기"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/border_light" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:paddingHorizontal="15dp"
                android:text="간편 로그인"
                android:textColor="#4b5461"
                android:textSize="12sp"
                android:textStyle="bold" />

        </FrameLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_border_gray_1dp"
            android:text="이메일로 로그인"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_round_kakao_4dp"
            android:drawableLeft="@drawable/ic_kakao_30"
            android:paddingHorizontal="48dp"
            android:text="카카오톡 로그인"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_round_facebook_4dp"
            android:drawableLeft="@drawable/facebook_icon_30"
            android:paddingHorizontal="48dp"
            android:text="페이스북 로그인"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_goneMarginBottom="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>